Dashboard created, based on Soft UI Template. Need to delete unwanted stuffs

--- a/apps/templates/admus/login.html
+++ b/apps/templates/admus/login.html
@@ -26,14 +26,14 @@
               <div class="card card-plain mt-8">
                 <div class="card-header pb-0 text-left bg-transparent">
                   <h4 class="font-weight-bolder text-info text-gradient">
-                    Django Soft - Login
+                    JobRev login
                   </h4>
                   <p class="mb-0">
                     
                     {% if msg %}
                       <span class="text-danger">{{ msg | safe }}</span>
                     {% else %}
-                        Add your credentials
+                        Just one more step!
                     {% endif %} 
 
                   </p>
