--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -16,10 +16,10 @@
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Money</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Lorem Ipsum</p>
                     <h5 class="font-weight-bolder mb-0">
-                      $53,000
-                      <span class="text-success text-sm font-weight-bolder">+55%</span>
+                      Lorem Ipsum
+                      <span class="text-success text-sm font-weight-bolder">Lorem Ipsum</span>
                     </h5>
                   </div>
                 </div>
@@ -38,10 +38,10 @@
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Users</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Lorem Ipsum</p>
                     <h5 class="font-weight-bolder mb-0">
-                      2,300
-                      <span class="text-success text-sm font-weight-bolder">+3%</span>
+                      Lorem Ipsum
+                      <span class="text-success text-sm font-weight-bolder">Lorem Ipsum</span>
                     </h5>
                   </div>
                 </div>
@@ -60,10 +60,10 @@
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">New Clients</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Lorem Ipsum</p>
                     <h5 class="font-weight-bolder mb-0">
-                      +3,462
-                      <span class="text-danger text-sm font-weight-bolder">-2%</span>
+                      Lorem Ipsum
+                      <span class="text-danger text-sm font-weight-bolder">Lorem Ipsum</span>
                     </h5>
                   </div>
                 </div>
@@ -82,10 +82,10 @@
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Sales</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Lorem Ipsum</p>
                     <h5 class="font-weight-bolder mb-0">
-                      $103,430
-                      <span class="text-success text-sm font-weight-bolder">+5%</span>
+                      Lorem Ipsum
+                      <span class="text-success text-sm font-weight-bolder">Lorem Ipsum</span>
                     </h5>
                   </div>
                 </div>
@@ -107,11 +107,11 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="d-flex flex-column h-100">
-                    <p class="mb-1 pt-2 text-bold">Built by developers</p>
-                    <h5 class="font-weight-bolder">Soft UI Dashboard</h5>
-                    <p class="mb-5">From colors, cards, typography to complex elements, you will find the full documentation.</p>
+                    <p class="mb-1 pt-2 text-bold">Lorem Ipsum</p>
+                    <h5 class="font-weight-bolder">Lorem Ipsum</h5>
+                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
-                      Read More
+                      Lorem Ipsum
                       <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
                     </a>
                   </div>
