Data cleaner by edmund

--- a/apps/templates/admus/login.html
+++ b/apps/templates/admus/login.html
@@ -24,6 +24,8 @@
           <div class="row">
             <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
               <div class="card card-plain mt-8">
+
+                <!-- LOGIN TITLE -->
                 <div class="card-header pb-0 text-left bg-transparent">
                   <h4 class="font-weight-bolder text-info text-gradient">
                     JobRev login
@@ -38,6 +40,8 @@
 
                   </p>
                 </div>
+
+                <!-- LOGIN INPUT -->
                 <div class="card-body">
 
                   <form role="form text-left" method="post" action="">
@@ -63,12 +67,15 @@
                   </form>
 
                 </div>
+
+                <!-- SIGNUP OPTION -->
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-4 text-sm mx-auto">
                     Don't have an account?
                     <a href="{% url 'register' %}" class="text-info text-gradient font-weight-bold">Sign UP</a>
                   </p>
                 </div>
+                
               </div>
             </div>
             <div class="col-md-6">
