--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -9,14 +9,16 @@
 
     <div class="container-fluid py-4">
 
+      <!-- FIRST ROW -->
       <div class="row">
+        <!-- FIRST BLOCK -->
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-body p-3">
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Lorem Ipsum</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">FIRST BLOCK</p>
                     <h5 class="font-weight-bolder mb-0">
                       Lorem Ipsum
                       <span class="text-success text-sm font-weight-bolder">Lorem Ipsum</span>
@@ -32,6 +34,8 @@
             </div>
           </div>
         </div>
+
+        <!-- SECOND BLOCK -->
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-body p-3">
@@ -54,13 +58,15 @@
             </div>
           </div>
         </div>
+
+        <!-- THIRD BLOCK -->
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-body p-3">
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Lorem Ipsum</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">THIRD BLOCK</p>
                     <h5 class="font-weight-bolder mb-0">
                       Lorem Ipsum
                       <span class="text-danger text-sm font-weight-bolder">Lorem Ipsum</span>
@@ -76,13 +82,15 @@
             </div>
           </div>
         </div>
+
+        <!-- FOURTH BLOCK -->
         <div class="col-xl-3 col-sm-6">
           <div class="card">
             <div class="card-body p-3">
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Lorem Ipsum</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">FOURTH BLOCK</p>
                     <h5 class="font-weight-bolder mb-0">
                       Lorem Ipsum
                       <span class="text-success text-sm font-weight-bolder">Lorem Ipsum</span>
@@ -100,14 +108,16 @@
         </div>
       </div>
 
+      <!-- SECOND ROW -->
       <div class="row mt-4">
+        <!-- FIRST BLOCK -->
         <div class="col-lg-7 mb-lg-0 mb-4">
           <div class="card">
             <div class="card-body p-3">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="d-flex flex-column h-100">
-                    <p class="mb-1 pt-2 text-bold">Lorem Ipsum</p>
+                    <p class="mb-1 pt-2 text-bold">FIRST BLOCK</p>
                     <h5 class="font-weight-bolder">Lorem Ipsum</h5>
                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
@@ -128,15 +138,17 @@
             </div>
           </div>
         </div>
+
+        <!-- SECOND BLOCK -->
         <div class="col-lg-5">
           <div class="card h-100 p-3">
             <div class="overflow-hidden position-relative border-radius-lg bg-cover h-100" style="background-image: url('{{ ASSETS_ROOT }}/img/ivancik.jpg');">
               <span class="mask bg-gradient-dark"></span>
               <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
-                <h5 class="text-white font-weight-bolder mb-4 pt-2">Work with the rockets</h5>
-                <p class="text-white">Wealth creation is an evolutionarily recent positive-sum game. It is all about who take the opportunity first.</p>
+                <h5 class="text-white font-weight-bolder mb-4 pt-2">SECOND BLOCK</h5>
+                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a class="text-white text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
-                  Read More
+                  Lorem Ipsum
                   <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
                 </a>
               </div>
@@ -145,7 +157,9 @@
         </div>
       </div>
 
+      <!-- THIRD ROW -->
       <div class="row mt-4">
+        <!-- FIRST BLOCK -->
         <div class="col-lg-5 mb-lg-0 mb-4">
           <div class="card z-index-2">
             <div class="card-body p-3">
@@ -262,6 +276,8 @@
             </div>
           </div>
         </div>
+
+        <!-- SECOND BLOCK -->
         <div class="col-lg-7">
           <div class="card z-index-2">
             <div class="card-header pb-0">
@@ -280,7 +296,9 @@
         </div>
       </div>
 
+      <!-- FOURTH ROW -->
       <div class="row my-4">
+        <!-- FIRST BLOCK -->
         <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
           <div class="card">
             <div class="card-header pb-0">
@@ -555,6 +573,8 @@
             </div>
           </div>
         </div>
+
+        <!-- SECOND BLOCK -->
         <div class="col-lg-4 col-md-6">
           <div class="card h-100">
             <div class="card-header pb-0">
