--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -1,9 +1,12 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
     <div class="container-fluid pe-0">
+
+      <!-- JOBREV DASHBOARD-->
       <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/index.html">
-        Soft UI Dashboard
+        JobRev Dashboard
       </a>
+
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon mt-2">
           <span class="navbar-toggler-bar bar1"></span>
@@ -11,9 +14,11 @@
           <span class="navbar-toggler-bar bar3"></span>
         </span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="navbar-nav mx-auto ms-xl-auto">
 
+          <!-- SIGN UP-->
           <li class="nav-item">
             <a class="nav-link me-2" href="{% url 'register' %}">
               <i class="fas fa-user-circle opacity-6 me-1"></i>
@@ -21,12 +26,15 @@
             </a>
           </li>
 
+          <!-- SIGN IN -->
           <li class="nav-item">
             <a class="nav-link me-2" href="{% url 'login' %}">
               <i class="fas fa-key opacity-6 me-1"></i>
               Sign In
             </a>
           </li>
+
+          <!-- TOGGLE THEME -->
           <li class="nav-item me-2 d-flex align-items-center">
             <label for="theme-switch" class="nav-link p-0 m-0">
               <i class="fa fa-sun cursor-pointer opacity-6" id="theme-indicator"></i>
@@ -36,11 +44,14 @@
           </li>
 
         </ul>
+
+        <!-- DOCUMENTATION -->
         <li class="nav-item d-flex align-items-center">
           <a class="btn btn-round btn-sm mb-0 btn-outline-primary me-2" 
              target="_blank" 
              href="https://<a certain website>">Documentation</a>
         </li>
+
       </div>
     </div>
   </nav>
