--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="{{ ASSETS_ROOT }}/img/favicon.png">
 
   <title>
-    Soft UI Dashboard - {% block title %}{% endblock %} | AppSeed
+    JobRev Dashboard | NicMund
   </title>
 
   <!--     Fonts and icons     -->
