fixed the logout problem, functional login logout register

--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -3,7 +3,7 @@
     <div class="container-fluid pe-0">
 
       <!-- JOBREV DASHBOARD-->
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/index.html">
+      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'index' %}">
         JobRev Dashboard
       </a>
 
