--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -56,6 +56,29 @@
         </div>
       </div>
 
+      <!-- THIRD ROW -->
+      <div class="row mt-4">
+        <div class="col-lg-12 mb-lg-0 mb-4">
+          <div class="card bg-gradient-secondary">
+            <h3 class="text-black font-weight-bolder mb-3 pt-3 ps-3">Day 3 : Hottest words of Reddit comments on r/job Subreddit on the 28th August </h3>
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="card p-3">
+                    <img class="h-300" src="{{ ASSETS_ROOT }}/img/03-HourWC.png"></img>
+                  </div>
+                </div>
+                <div class="col-lg-6 ms-auto text-center mt-5 mt-lg-0">
+                  <div class="card p-3">
+                    <img class="h-300" src="{{ ASSETS_ROOT }}/img/03-HourWT.gv.png"></img>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       {% include "includes/footer.html" %}
 
     </div>
